--- a/VIS-MAVEN-100pCode-1.3/release.properties
+++ b/VIS-MAVEN-100pCode-1.3/release.properties
@@ -1,13 +1,20 @@
 #release configuration
-#Thu Jun 11 23:46:25 IST 2020
+#Thu Jun 11 23:48:36 IST 2020
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-exec.additionalArguments=-P jboss
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.scm.com\:VIS-MAVEN-100pCode-1.3.id=github
+completedPhase=generate-release-poms
 scm.url=scm\:git\:https\://github.com/sharath079/JAVA-SPRING.git
-exec.snapshotReleasePluginAllowed=false
 scm.id=github
+project.scm.com\:VIS-MAVEN-100pCode-1.3.developerConnection=scm\:git\:https\://github.com/sharath079/JAVA-SPRING.git
+exec.additionalArguments=-P jboss
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.scm.com\:VIS-MAVEN-100pCode-1.3.url=https\://github.com/sharath079/JAVA-SPRING
+project.dev.com\:VIS-MAVEN-100pCode-1.3=1.0.1-SNAPSHOT
+scm.tag=VIS-MAVEN-100pCode-1.3-1.0.0
+exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.rel.com\:VIS-MAVEN-100pCode-1.3=1.0.0
+project.scm.com\:VIS-MAVEN-100pCode-1.3.tag=VIS-MAVEN-100pCode-1.3-1.0.0
