--- a/VIS-MAVEN-100pCode-1.3/.classpath
+++ b/VIS-MAVEN-100pCode-1.3/.classpath
@@ -29,5 +29,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="/Vehicle Insurance System-version 1.0"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
