--- a/VIS-MAVEN-100pCode-1.3/pom.xml
+++ b/VIS-MAVEN-100pCode-1.3/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com</groupId>
   <artifactId>VIS-MAVEN-100pCode-1.3</artifactId>
-  <version>1.0.RELEASE</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
   <name>VIS-MAVEN-100pCode Maven Webapp</name>
@@ -97,7 +97,7 @@
 <scm>
     <developerConnection>scm:git:https://github.com/sharath079/JAVA-SPRING.git</developerConnection>
     <url>https://github.com/sharath079/JAVA-SPRING</url>
-    <tag>VIS-MAVEN-100pCode-1.3-1.0.RELEASE</tag>
+    <tag>VIS-MAVEN-100pCode-1.0</tag>
 </scm>
 
   <build>
