--- a/VIS-SpringBoot-1.4/pom.xml
+++ b/VIS-SpringBoot-1.4/pom.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>kun</groupId>
 	<artifactId>VIS-SpringBoot-1.4</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.4-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>VIS-SpringBoot-1.4</name>
 	<description>Demo project for Spring Boot</description>
@@ -90,7 +89,7 @@
 <scm>
     <developerConnection>scm:git:https://github.com/sharath079/JAVA-SPRING.git</developerConnection>
     <url>https://github.com/sharath079/JAVA-SPRING</url>
-    <tag>VIS-Boot-APP</tag>
+    <tag>VIS-SpringBoot-1.4-1.5.RELEASE</tag>
 </scm>
 
 	<build>
