--- a/VIS-SpringBoot-1.4/pom.xml
+++ b/VIS-SpringBoot-1.4/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>kun</groupId>
 	<artifactId>VIS-SpringBoot-1.4</artifactId>
-	<version>1.4-SNAPSHOT</version>
+	<version>1.5.RELEASE</version>
 	<packaging>war</packaging>
 	<name>VIS-SpringBoot-1.4</name>
 	<description>Demo project for Spring Boot</description>
